--- a/Makefile.common
+++ b/Makefile.common
@@ -1,2 +1,7 @@
-INCFLAGS := -I$(CORE_DIR)
-SOURCES_C  := $(CORE_DIR)/e6809.c $(CORE_DIR)/e8910.c $(LIBRETRO_DIR)/libretro.c $(CORE_DIR)/vecx.c
+LIBRETRO_DIR := $(CORE_DIR)/libretro
+INCFLAGS     := -I$(CORE_DIR)
+
+SOURCES_C  := $(CORE_DIR)/e6809.c \
+				  $(CORE_DIR)/e8910.c \
+				  $(LIBRETRO_DIR)/libretro.c \
+				  $(CORE_DIR)/vecx.c
