Report git version with library_version

--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -35,6 +35,10 @@ endif
 
 TARGET_NAME := vecx
 LIBM := 
+GIT_VERSION := " $(shell git rev-parse --short HEAD || echo unknown)"
+ifneq ($(GIT_VERSION)," unknown")
+	CFLAGS += -DGIT_VERSION=\"$(GIT_VERSION)\"
+endif
 
 ifeq ($(ARCHFLAGS),)
 ifeq ($(archs),ppc)
