--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -35,7 +35,7 @@ endif
 
 TARGET_NAME := vecx
 LIBM := 
-GIT_VERSION := " $(shell git rev-parse --short HEAD || echo unknown)"
+GIT_VERSION ?= " $(shell git rev-parse --short HEAD || echo unknown)"
 ifneq ($(GIT_VERSION)," unknown")
 	CFLAGS += -DGIT_VERSION=\"$(GIT_VERSION)\"
 endif
