--- a/Makefile.common
+++ b/Makefile.common
@@ -1,5 +1,12 @@
 LIBRETRO_DIR := $(CORE_DIR)/libretro
 INCFLAGS     := -I$(CORE_DIR)
+COREDEFINES   = -D__LIBRETRO__ -DHAVE_STRINGS_H -DHAVE_STDINT_H -DHAVE_INTTYPES_H 
+
+ifneq (,$(findstring msvc,$(platform)))
+COREDEFINES += -DINLINE=_inline
+else
+COREDEFINES += -DINLINE=inline
+endif
 
 SOURCES_C  := $(CORE_DIR)/e6809.c \
 				  $(CORE_DIR)/e8910.c \
