--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -332,7 +332,7 @@ $(TARGET): $(OBJECTS)
 ifeq ($(STATIC_LINKING), 1)
 	$(AR) rcs $@ $(OBJECTS)
 else
-	$(LD) $(fpic) $(SHARED) $(INCLUDES) $(LDFLAGS) $(LINKOUT)$@ $(OBJECTS) $(LDFLAGS)
+	$(LD) $(fpic) $(SHARED) $(LDFLAGS) $(LINKOUT)$@ $(OBJECTS) $(LDFLAGS)
 endif
 
 %.o: %.c
