--- a/Makefile.common
+++ b/Makefile.common
@@ -10,5 +10,5 @@ endif
 
 SOURCES_C  := $(CORE_DIR)/e6809.c \
 				  $(CORE_DIR)/e8910.c \
-				  $(LIBRETRO_DIR)/libretro.c \
+				  $(CORE_DIR)/libretro.c \
 				  $(CORE_DIR)/vecx.c
