--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -401,6 +401,8 @@ else
 	LD = $(CC)
 endif
 
+CFLAGS += $(INCFLAGS)
+
 ifeq ($(platform), theos_ios)
 COMMON_FLAGS := -DIOS $(COMMON_DEFINES) $(INCFLAGS) -I$(THEOS_INCLUDE_PATH) -Wno-error
 $(LIBRARY_NAME)_CFLAGS += $(COMMON_FLAGS) $(CFLAGS)
