--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -103,6 +103,17 @@ else
    CFLAGS += -miphoneos-version-min=5.0
 endif
 
+# tvOS
+else ifeq ($(platform), tvos-arm64)
+   TARGET := $(TARGET_NAME)_libretro_tvos.dylib
+   fpic := -fPIC
+   SHARED := -dynamiclib
+
+ifeq ($(IOSSDK),)
+   IOSSDK := $(shell xcodebuild -version -sdk appletvos Path)
+endif
+   CFLAGS += -DIOS
+
 # Theos iOS
 else ifeq ($(platform), theos_ios)
 DEPLOYMENT_IOSVERSION = 5.0
