--- a/Makefile.common
+++ b/Makefile.common
@@ -1,28 +1,32 @@
 LIBRETRO_COMM_DIR := $(CORE_DIR)/libretro-common
 INCFLAGS     := -I$(CORE_DIR) \
-					 -I$(LIBRETRO_COMM_DIR)/include
+                -I$(LIBRETRO_COMM_DIR)/include
 
 COREDEFINES   = -D__LIBRETRO__ -DHAVE_STRINGS_H -DHAVE_STDINT_H -DHAVE_INTTYPES_H 
 
 
 ifneq (,$(findstring msvc2003,$(platform)))
-INCFLAGS += -I$(LIBRETRO_COMM_DIR)/include/compat/msvc
+   INCFLAGS += -I$(LIBRETRO_COMM_DIR)/include/compat/msvc
 endif
 
 ifneq (,$(findstring msvc,$(platform)))
-COREDEFINES += -DINLINE=_inline
+   COREDEFINES += -DINLINE=_inline
 else
-COREDEFINES += -DINLINE=inline
+   COREDEFINES += -DINLINE=inline
 endif
 
-ifeq ($(GLES), 1)
-   SOURCES_C += $(CORE_DIR)/glsym/glsym_es2.c
-else
-   SOURCES_C += $(CORE_DIR)/glsym/glsym_gl.c
+ifneq ($(HAS_GPU),)
+   ifeq ($(GLES), 1)
+      SOURCES_C += $(CORE_DIR)/glsym/glsym_es2.c
+   else
+      SOURCES_C += $(CORE_DIR)/glsym/glsym_gl.c
+   endif
 endif
 
 SOURCES_C  += $(CORE_DIR)/e6809.c \
               $(CORE_DIR)/e8910.c \
               $(CORE_DIR)/libretro.c \
-              $(CORE_DIR)/vecx.c\
-              $(CORE_DIR)/glsym/rglgen.c
+              $(CORE_DIR)/vecx.c
+ifneq ($(HAS_GPU),)
+   SOURCES_C  += $(CORE_DIR)/glsym/rglgen.c
+endif              
