--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -1,4 +1,4 @@
-#DEBUG=1
+DEBUG=0
 FRONTEND_SUPPORTS_RGB565=1
 
 ifeq ($(platform),)
@@ -38,7 +38,7 @@ endif
 CORE_DIR := .
 
 TARGET_NAME := vecx
-LIBM := -lm
+LIBM :=
 GL_LIB :=
 GIT_VERSION ?= " $(shell git rev-parse --short HEAD || echo unknown)"
 ifneq ($(GIT_VERSION)," unknown")
@@ -58,7 +58,10 @@ ifeq ($(platform), unix)
    TARGET := $(TARGET_NAME)_libretro.so
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=$(CORE_DIR)/link.T
-   GL_LIB := -lGL
+   ifeq ($(NOGPU),)
+      GL_LIB := -lGL
+      HAS_GPU = 1
+   endif
 else ifeq ($(platform), linux-portable)
    TARGET := $(TARGET_NAME)_libretro.so
    fpic := -fPIC -nostdlib
@@ -66,7 +69,10 @@ else ifeq ($(platform), linux-portable)
 else ifeq ($(platform), osx)
    TARGET := $(TARGET_NAME)_libretro.dylib
    fpic := -fPIC
-   GL_LIB := -framework OpenGL
+   ifeq ($(NOGPU),)
+      GL_LIB := -framework OpenGL
+      HAS_GPU = 1
+   endif
    ifeq ($(arch),ppc)
       CFLAGS += -DMSB_FIRST -D__ppc__
    endif
@@ -96,9 +102,13 @@ else ifneq (,$(findstring ios,$(platform)))
       CC = cc -arch armv7 -isysroot $(IOSSDK)
       CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
    endif
-   GL_LIB := -framework OpenGLES
-   DEFINES := -DIOS
-   CFLAGS += -DHAVE_OPENGLES $(DEFINES)
+   CFLAGS += -DIOS
+   
+   ifeq ($(NOGPU),)
+      GL_LIB := -framework OpenGLES
+      CFLAGS += -DHAVE_OPENGLES
+      HAS_GPU = 1
+   endif
 
    ifeq ($(platform),$(filter $(platform),ios9 ios-arm64))
       CC     += -miphoneos-version-min=8.0
@@ -113,7 +123,10 @@ else ifeq ($(platform), pi)
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=link.T -Wl,--no-undefined
    CFLAGS += -I/opt/vc/include -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/vmcs_host/linux
-   GLES := 1
+   ifeq ($(NOGPU),)
+      HAS_GPU = 1
+      GLES := 1
+   endif
    LIBS += -L/opt/vc/lib
 # tvOS
 else ifeq ($(platform), tvos-arm64)
@@ -139,13 +152,15 @@ else ifeq ($(platform), qnx)
    TARGET := $(TARGET_NAME)_libretro_$(platform).so
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=$(CORE_DIR)/link.T
-   GL_LIB := -lGL
+   ifeq ($(NOGPU),)
+      GL_LIB := -lGLESv2
+      GLES := 1
+      HAS_GPU = 1
+   endif
 
    CC = qcc -Vgcc_ntoarmv7le
    AR = qcc -Vgcc_ntoarmv7le
    CFLAGS += -D__BLACKBERRY_QNX__
-   GL_LIB := -lGLESv2
-   GLES := 1
 else ifeq ($(platform), ps3)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
    CC = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
@@ -384,6 +399,10 @@ else ifeq ($(platform), windows_msvc2010_x86)
    TARGET := $(TARGET_NAME)_libretro.dll
    PSS_STYLE :=2
    LDFLAGS += -DLL
+   ifeq ($(NOGPU),)
+      GL_LIB := -lopengl32
+      HAS_GPU = 1
+   endif
 
 # Windows MSVC 2005 x86
 else ifeq ($(platform), windows_msvc2005_x86)
@@ -404,6 +423,10 @@ else ifeq ($(platform), windows_msvc2005_x86)
    PSS_STYLE :=2
    LDFLAGS += -DLL
    CFLAGS += -D_CRT_SECURE_NO_DEPRECATE
+   ifeq ($(NOGPU),)
+      GL_LIB := -lopengl32
+      HAS_GPU = 1
+   endif
 
 # Windows MSVC 2003 x86
 else ifeq ($(platform), windows_msvc2003_x86)
@@ -424,6 +447,10 @@ else ifeq ($(platform), windows_msvc2003_x86)
    PSS_STYLE :=2
    LDFLAGS += -DLL
    CFLAGS += -D_CRT_SECURE_NO_DEPRECATE
+   ifeq ($(NOGPU),)
+      GL_LIB := -lopengl32
+      HAS_GPU = 1
+   endif
 
 # Windows MSVC 2017 all architectures
 else ifneq (,$(findstring windows_msvc2017,$(platform)))
@@ -519,6 +546,10 @@ else ifneq (,$(findstring windows_msvc2017,$(platform)))
    TARGET := $(TARGET_NAME)_libretro.dll
    PSS_STYLE :=2
    LDFLAGS += -DLL
+   ifeq ($(NOGPU),)
+      GL_LIB := -lopengl32
+      HAS_GPU = 1
+   endif
 
 # Windows
 else
@@ -526,6 +557,10 @@ else
    CC ?= gcc
    SHARED := -shared -static-libgcc -static-libstdc++ -s -Wl,--version-script=$(CORE_DIR)/link.T
    CFLAGS += -D__WIN32__
+   ifeq ($(NOGPU),)
+      GL_LIB := -lopengl32
+      HAS_GPU = 1
+   endif
 endif
 
 ifeq ($(DEBUG), 1)
@@ -566,26 +601,32 @@ LDFLAGS += $(LIBM)
 
 CORE_DIR     := .
 
-ifeq ($(GLES), 1)
-   CFLAGS += -DHAVE_OPENGLES -DHAVE_OPENGLES2
-   ifeq ($(GLES31), 1)
-      CFLAGS += -DHAVE_OPENGLES3 -DHAVE_OPENGLES_3_1
-   else ifeq ($(GLES3), 1)
-      CFLAGS += -DHAVE_OPENGLES3
-   endif
-   ifeq ($(platform), pi)
-      LIBS += -lbrcmGLESv2 -lbcm_host -lpthread # Still link against GLESv2 when using GLES3 API, at least on desktop Linux.
+ifneq ($(HAS_GPU),)
+   ifeq ($(GLES), 1)
+      CFLAGS += -DHAVE_OPENGLES -DHAVE_OPENGLES2
+      ifeq ($(GLES31), 1)
+         CFLAGS += -DHAVE_OPENGLES3 -DHAVE_OPENGLES_3_1
+      else ifeq ($(GLES3), 1)
+         CFLAGS += -DHAVE_OPENGLES3
+      endif
+      ifeq ($(platform), pi)
+         LIBS += -lbrcmGLESv2 -lbcm_host -lpthread # Still link against GLESv2 when using GLES3 API, at least on desktop Linux.
+      else
+         LIBS += -lGLESv2 # Still link against GLESv2 when using GLES3 API, at least on desktop Linux.
+      endif
+      OBJECTS += glsym/glsym_es2.o
    else
-      LIBS += -lGLESv2 # Still link against GLESv2 when using GLES3 API, at least on desktop Linux.
+      OBJECTS += glsym/glsym_gl.o
+      LIBS += $(GL_LIB)
    endif
-   OBJECTS += glsym/glsym_es2.o
-else
-   OBJECTS += glsym/glsym_gl.o
-   LIBS += $(GL_LIB)
+   
+   ifeq ($(CORE), 1)
+      CFLAGS += -DCORE
+   endif
 endif
 
-CFLAGS += -I. -I./libretro-common/include
-CFLAGS += -D__LIBRETRO__
+#CFLAGS += -I.
+#CFLAGS += -D__LIBRETRO__
 
 
 include Makefile.common
@@ -636,6 +677,11 @@ else
 endif
 
 CFLAGS += $(INCFLAGS)
+
+ifneq ($(HAS_GPU),)
+   CFLAGS += -DHAS_GPU
+   LIBM := -lm
+endif
 
 ifeq ($(platform), theos_ios)
    COMMON_FLAGS := -DIOS $(COMMON_DEFINES) $(INCFLAGS) -I$(THEOS_INCLUDE_PATH) -Wno-error
