Base code around HAS_GPU for now - HAS_GPU being defined assumes GL for now. Maybe in future we can split up GL code with HAVE_OPENGL/HAVE_OPENGLES when other renderers like Vulkan/D3D11 are supported

--- a/Makefile.common
+++ b/Makefile.common
@@ -14,8 +14,8 @@ else
    COREDEFINES += -DINLINE=inline
 endif
 
-ifeq ($(HAVE_OPENGL), 1)
-   COREDEFINES += -DHAVE_OPENGL
+ifeq ($(HAS_GPU), 1)
+	COREDEFINES += -DHAS_GPU
 endif
 
 SOURCES_C  += $(CORE_DIR)/e6809.c \
@@ -23,7 +23,7 @@ SOURCES_C  += $(CORE_DIR)/e6809.c \
               $(CORE_DIR)/libretro.c \
               $(CORE_DIR)/vecx.c
 
-ifeq ($(HAVE_OPENGL), 1)
+ifeq ($(HAS_GPU), 1)
    SOURCES_C  += $(CORE_DIR)/glsym/rglgen.c
 
    ifeq ($(GLES), 1)
