--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -1,5 +1,6 @@
 DEBUG=0
 FRONTEND_SUPPORTS_RGB565=1
+HAS_GPU ?= 1
 
 ifeq ($(platform),)
    platform = unix
@@ -58,22 +59,21 @@ ifeq ($(platform), unix)
    TARGET := $(TARGET_NAME)_libretro.so
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=$(CORE_DIR)/link.T
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lGL
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
 else ifeq ($(platform), linux-portable)
    TARGET := $(TARGET_NAME)_libretro.so
    fpic := -fPIC -nostdlib
    SHARED := -shared -Wl,--version-script=$(CORE_DIR)/link.T
+   ifeq ($(HAS_GPU), 1)
+      GL_LIB := -lGL
+   endif
 else ifeq ($(platform), osx)
    TARGET := $(TARGET_NAME)_libretro.dylib
    fpic := -fPIC
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -framework OpenGL
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
    ifeq ($(arch),ppc)
       CFLAGS += -DMSB_FIRST -D__ppc__
@@ -97,6 +97,7 @@ else ifneq (,$(findstring ios,$(platform)))
       IOSSDK := $(shell xcodebuild -version -sdk iphoneos Path)
    endif
 
+   GLES := 1
    ifeq ($(platform),ios-arm64)
       CC = cc -arch arm64 -isysroot $(IOSSDK)
       CXX = clang++ -arch arm64 -isysroot $(IOSSDK)
@@ -106,11 +107,9 @@ else ifneq (,$(findstring ios,$(platform)))
    endif
    CFLAGS += -DIOS
    
-	ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -framework OpenGLES
       CFLAGS += -DHAVE_OPENGLES
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
 
    ifeq ($(platform),$(filter $(platform),ios9 ios-arm64))
@@ -126,10 +125,8 @@ else ifeq ($(platform), pi)
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=link.T -Wl,--no-undefined
    CFLAGS += -I/opt/vc/include -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/vmcs_host/linux
-   ifeq ($(HAVE_OPENGL),1)
-      HAS_GPU = 1
+   ifeq ($(HAS_GPU), 1)
       GLES := 1
-      HAVE_OPENGL = 1
    endif
    LIBS += -L/opt/vc/lib
 # tvOS
@@ -138,6 +135,7 @@ else ifeq ($(platform), tvos-arm64)
    fpic := -fPIC
    SHARED := -dynamiclib
 
+   GLES := 1
    ifeq ($(IOSSDK),)
       IOSSDK := $(shell xcodebuild -version -sdk appletvos Path)
    endif
@@ -156,11 +154,9 @@ else ifeq ($(platform), qnx)
    TARGET := $(TARGET_NAME)_libretro_$(platform).so
    fpic := -fPIC
    SHARED := -shared -Wl,--version-script=$(CORE_DIR)/link.T
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lGLESv2
       GLES := 1
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
 
    CC = qcc -Vgcc_ntoarmv7le
@@ -172,18 +168,21 @@ else ifeq ($(platform), ps3)
    AR = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
    CFLAGS += -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+	HAS_GPU=0
 else ifeq ($(platform), sncps3)
    TARGET := $(TARGET_NAME)_libretro_ps3.a
    CC = $(CELL_SDK)/host-win32/sn/bin/ps3ppusnc.exe
    AR = $(CELL_SDK)/host-win32/sn/bin/ps3snarl.exe
    CFLAGS += -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+	HAS_GPU=0
 else ifeq ($(platform), psl1ght)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
    CC = $(PS3DEV)/ppu/bin/ppu-gcc$(EXE_EXT)
    AR = $(PS3DEV)/ppu/bin/ppu-ar$(EXE_EXT)
    CFLAGS += -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+	HAS_GPU=0
 
 else ifeq ($(platform), psp1)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
@@ -191,6 +190,7 @@ else ifeq ($(platform), psp1)
    AR = psp-ar$(EXE_EXT)
    CFLAGS += -DPSP -G0
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 # Vita
 else ifeq ($(platform), vita)
@@ -199,6 +199,7 @@ else ifeq ($(platform), vita)
    AR = arm-vita-eabi-ar$(EXE_EXT)
    CFLAGS += -DVITA
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 # CTR (3DS)
 else ifeq ($(platform), ctr)
@@ -210,6 +211,7 @@ else ifeq ($(platform), ctr)
    CFLAGS += -fomit-frame-pointer -ffast-math
    CFLAGS += -D_3DS
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 else ifeq ($(platform), xenon)
    TARGET := $(TARGET_NAME)_libretro_xenon360.a
@@ -217,12 +219,15 @@ else ifeq ($(platform), xenon)
    AR = xenon-ar$(EXE_EXT)
    CFLAGS += -D__LIBXENON__ -m32 -D__ppc__
    STATIC_LINKING = 1
+   HAS_GPU=0
+
 else ifeq ($(platform), ngc)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
    CC = $(DEVKITPPC)/bin/powerpc-eabi-gcc$(EXE_EXT)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    CFLAGS += -DGEKKO -DHW_DOL -mrvl -mcpu=750 -meabi -mhard-float -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 else ifeq ($(platform), wii)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
@@ -230,6 +235,7 @@ else ifeq ($(platform), wii)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    CFLAGS += -DGEKKO -DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 else ifeq ($(platform), wiiu)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
@@ -237,6 +243,7 @@ else ifeq ($(platform), wiiu)
    AR = $(DEVKITPPC)/bin/powerpc-eabi-ar$(EXE_EXT)
    CFLAGS += -DGEKKO -DWIIU -DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float -DMSB_FIRST -D__ppc__
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 # Nintendo Switch (libtransistor)
 else ifeq ($(platform), switch)
@@ -349,7 +356,9 @@ else ifeq ($(platform), xbox1_msvc2003)
    CXXFLAGS += -D_XBOX -D_XBOX1
    STATIC_LINKING=1
    HAS_GCC := 0
-   # Windows MSVC 2010 Xbox 360
+   HAS_GPU=0
+
+# Windows MSVC 2010 Xbox 360
 else ifeq ($(platform), xbox360_msvc2010)
    TARGET := $(TARGET_NAME)_libretro_xdk360.lib
    MSVCBINDIRPREFIX = $(XEDK)/bin/win32
@@ -364,6 +373,7 @@ else ifeq ($(platform), xbox360_msvc2010)
    CXXFLAGS += -D_XBOX -D_XBOX360
    STATIC_LINKING=1
    HAS_GCC := 0
+   HAS_GPU=0
 
 # Windows MSVC 2010 x64
 else ifeq ($(platform), windows_msvc2010_x64)
@@ -384,6 +394,8 @@ else ifeq ($(platform), windows_msvc2010_x64)
    TARGET := $(TARGET_NAME)_libretro.dll
    PSS_STYLE :=2
    LDFLAGS += -DLL
+   HAS_GPU=0
+
 # Windows MSVC 2010 x86
 else ifeq ($(platform), windows_msvc2010_x86)
    CC  = cl.exe
@@ -404,11 +416,10 @@ else ifeq ($(platform), windows_msvc2010_x86)
    TARGET := $(TARGET_NAME)_libretro.dll
    PSS_STYLE :=2
    LDFLAGS += -DLL
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lopengl32
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
+   HAS_GPU=0
 
 # Windows MSVC 2005 x86
 else ifeq ($(platform), windows_msvc2005_x86)
@@ -429,11 +440,10 @@ else ifeq ($(platform), windows_msvc2005_x86)
    PSS_STYLE :=2
    LDFLAGS += -DLL
    CFLAGS += -D_CRT_SECURE_NO_DEPRECATE
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lopengl32
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
+   HAS_GPU=0
 
 # Windows MSVC 2003 x86
 else ifeq ($(platform), windows_msvc2003_x86)
@@ -454,11 +464,10 @@ else ifeq ($(platform), windows_msvc2003_x86)
    PSS_STYLE :=2
    LDFLAGS += -DLL
    CFLAGS += -D_CRT_SECURE_NO_DEPRECATE
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lopengl32
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
+   HAS_GPU=0
 
 # Windows MSVC 2017 all architectures
 else ifneq (,$(findstring windows_msvc2017,$(platform)))
@@ -554,11 +563,10 @@ else ifneq (,$(findstring windows_msvc2017,$(platform)))
    TARGET := $(TARGET_NAME)_libretro.dll
    PSS_STYLE :=2
    LDFLAGS += -DLL
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lopengl32
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
+   HAS_GPU=0
 
 # Windows
 else
@@ -566,10 +574,8 @@ else
    CC ?= gcc
    SHARED := -shared -static-libgcc -static-libstdc++ -s -Wl,--version-script=$(CORE_DIR)/link.T
    CFLAGS += -D__WIN32__
-   ifeq ($(HAVE_OPENGL),1)
+   ifeq ($(HAS_GPU), 1)
       GL_LIB := -lopengl32
-      HAS_GPU = 1
-      HAVE_OPENGL = 1
    endif
 endif
 
@@ -611,7 +617,7 @@ LDFLAGS += $(LIBM)
 
 CORE_DIR     := .
 
-ifneq ($(HAS_GPU),)
+ifeq ($(HAS_GPU), 1)
    ifeq ($(GLES), 1)
       CFLAGS += -DHAVE_OPENGLES -DHAVE_OPENGLES2
       ifeq ($(GLES31), 1)
@@ -690,14 +696,6 @@ CFLAGS += $(INCFLAGS)
 
 ifneq ($(HAS_GPU),)
    LIBM := -lm
-endif
-
-ifneq ($(HAS_GPU),)
-   CFLAGS += -DHAS_GPU
-endif
-
-ifeq ($(HAVE_OPENGL),1)
-   CFLAGS += -DHAVE_OPENGL
 endif
 
 ifeq ($(platform), theos_ios)
