--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -109,7 +109,7 @@ else ifneq (,$(findstring ios,$(platform)))
    
    ifeq ($(HAS_GPU), 1)
       GL_LIB := -framework OpenGLES
-      CFLAGS += -DHAVE_OPENGLES
+      CFLAGS += -DHAVE_OPENGLES -DHAVE_OPENGLES2
    endif
 
    ifeq ($(platform),$(filter $(platform),ios9 ios-arm64))
