--- a/Makefile.common
+++ b/Makefile.common
@@ -29,8 +29,13 @@ ifeq ($(HAS_GPU), 1)
 
    ifeq ($(GLES), 1)
       COREDEFINES += -DHAVE_OPENGLES2
+   endif
+ifneq ($(STATIC_LINKING),1)
+   ifeq ($(GLES), 1)
       SOURCES_C += $(LIBRETRO_COMM_DIR)/glsym/glsym_es2.c
    else
       SOURCES_C += $(LIBRETRO_COMM_DIR)/glsym/glsym_gl.c
    endif
+endif
+
 endif
