--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -72,9 +72,9 @@ else ifeq ($(platform), linux-portable)
 else ifeq ($(platform), osx)
    TARGET := $(TARGET_NAME)_libretro.dylib
    fpic := -fPIC
-   ifeq ($(HAS_GPU), 1)
-      GL_LIB := -framework OpenGL
-   endif
+   #ifeq ($(HAS_GPU), 1)
+      #GL_LIB := -framework OpenGL
+   #endif
    ifeq ($(arch),ppc)
       CFLAGS += -DMSB_FIRST -D__ppc__
    endif
@@ -87,6 +87,7 @@ else ifeq ($(platform), osx)
    else
       ARCHFLAGS = -arch i386 -arch x86_64
    endif
+   HAS_GPU=0
 # iOS
 else ifneq (,$(findstring ios,$(platform)))
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
