--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -337,6 +337,7 @@ else ifneq (,$(findstring armv,$(platform)))
 else ifeq ($(platform), emscripten)
    TARGET := $(TARGET_NAME)_libretro_$(platform).bc
    STATIC_LINKING = 1
+   HAS_GPU=0
 
 # GCW0
 else ifeq ($(platform), gcw0)
