--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -171,20 +171,6 @@ else ifeq ($(platform), qnx)
    CC = qcc -Vgcc_ntoarmv7le
    AR = qcc -Vgcc_ntoarmv7le
    CFLAGS += -D__BLACKBERRY_QNX__
-else ifeq ($(platform), ps3)
-   TARGET := $(TARGET_NAME)_libretro_$(platform).a
-   CC = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-gcc.exe
-   AR = $(CELL_SDK)/host-win32/ppu/bin/ppu-lv2-ar.exe
-   CFLAGS += -DMSB_FIRST -D__ppc__
-   STATIC_LINKING = 1
-	HAS_GPU=0
-else ifeq ($(platform), sncps3)
-   TARGET := $(TARGET_NAME)_libretro_ps3.a
-   CC = $(CELL_SDK)/host-win32/sn/bin/ps3ppusnc.exe
-   AR = $(CELL_SDK)/host-win32/sn/bin/ps3snarl.exe
-   CFLAGS += -DMSB_FIRST -D__ppc__
-   STATIC_LINKING = 1
-	HAS_GPU=0
 else ifeq ($(platform), psl1ght)
    TARGET := $(TARGET_NAME)_libretro_$(platform).a
    CC = $(PS3DEV)/ppu/bin/ppu-gcc$(EXE_EXT)
@@ -662,10 +648,7 @@ OBJECTS   := $(SOURCES_C:.c=.o)
 INCLUDES   = $(INCFLAGS)
 DEFINES    = $(COREDEFINES)
 
-ifeq ($(platform), sncps3)
-   WARNINGS_DEFINES =
-   CODE_DEFINES =
-else ifeq ($(platform), ios)
+ifeq ($(platform), ios)
    WARNINGS_DEFINES =
    CODE_DEFINES =
 else ifneq (,$(findstring msvc,$(platform)))
