Add ASAN option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.7)
 project(vecx_libretro)
 set (CMAKE_CXX_STANDARD 17)
 
+set(ASAN off CACHE BOOL "Turn on Address Sanitizer")
+
 include_directories(
     libretro-common/include
 )
@@ -21,6 +23,12 @@ add_library(${PROJECT_NAME} SHARED
     libretro-common/glsym/rglgen.c
     libretro-common/glsym/glsym_es2.c
     )
+
+if(ASAN)
+    target_compile_options(${PROJECT_NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer -g)
+    target_link_options(${PROJECT_NAME} PRIVATE -fsanitize=address -fno-omit-frame-pointer -g)
+endif()
+
 set_target_properties(${PROJECT_NAME} PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/link.T)
 
 target_link_libraries(${PROJECT_NAME}
